syntax = "proto3";
package  go_micro_services;

import "google/protobuf/timestamp.proto";
import "commons.proto";

option go_package = "pb/";


service CategoryService{
  rpc GetCategoryById(ById) returns (CategoryResponse);
  rpc UpdateCategory(UpdateCategoryRequest) returns (CategoryResponse);
  rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse);
  rpc DeleteCategory(ById) returns (CategoryResponse);
  rpc ListCategorys(empty) returns (CategoryResponseRepeated);
}

message Category {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp deleted_at = 9;
}

message CategoryResponse{
  int64 code=1;
  string message=2;
  Category data=3;
}
message CategoryResponseRepeated{
  int64 code=1;
  string message=2;
  repeated Category data=3;
}
message UpdateCategoryRequest{
  string id=1;
  optional string name=2;
}
message CreateCategoryRequest{
  string name=1;
}